# consultantOS

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ALERTING_INTEGRATION_EXAMPLE.md  ANALYTICS_BUILDER_IMPLEMENTATION.md  ANALYTICS_EXAMPLES.md  ANALYTICS_FILES_CREATED.txt  ANALYTICS_QUICK_REFERENCE.md  ANOMALY_DETECTION_IMPLEMENTATION.md  API_Documentation.md  API_KEYS_SETUP_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_SUMMARY.md  BACKEND_CONNECTION_ISSUE.md  BACKEND_IMPORT_FIX.md  BACKEND_IMPORT_TEST.md  BACKEND_STARTUP_ISSUE.md  BACKEND_STARTUP_STATUS.md  BACKEND_TROUBLESHOOTING.md  BILLING_FAQ.md  BROWSER_TESTING_RESULTS.md  CELERY_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CLOUD_RUN_DEPLOYMENT_PREP.md  CLOUD_RUN_DEPLOYMENT_READINESS.md  COMPLETE_TEST_RESULTS.md  DARK_DATA_IMPLEMENTATION_SUMMARY.md  DARK_DATA_QUICK_START.md  DASHBOARD_AGENTS_IMPLEMENTATION.md  DASHBOARD_AGENTS_SUMMARY.md  DASHBOARD_BROWSER_TEST_RESULTS.md  DASHBOARD_DEMO_GUIDE.md  DASHBOARD_DEPLOYMENT_STATUS.md  DASHBOARD_ENHANCEMENTS_COMPLETE.md  DASHBOARD_FEATURES_GAP_ANALYSIS.md  DASHBOARD_IMPLEMENTATION_COMPLETE.md  DASHBOARD_USER_TESTING_GUIDE.md  (+191 more)
.serena/: project.yml
alertmanager/: config.yml
claudedocs/: ALPHA_VANTAGE_INTEGRATION.md  ANALYSIS_FLOW_IMPLEMENTATION.md  ARCHITECTURE_REVIEW.md  CODE_REVIEW_REPORT.md  COMPLETE_APPLICATION_SUMMARY.md  CONTINUOUS_INTELLIGENCE_IMPLEMENTATION.md  CONVERSATIONAL_AI_IMPLEMENTATION.md  PHASE1_INDEX.md  (+33 more)
libs/consultantos_core/: README.md  pyproject.toml
libs/consultantos_core/consultantos_core/: __init__.py
(+695 files in other folders)
