[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consultantos-core"
version = "0.1.0"
description = "Shared core modules for ConsultantOS multi-service deployment"
authors = [{name = "ConsultantOS Team"}]
license = {text = "Proprietary"}
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[tool.setuptools]
packages = ["consultantos_core"]
